# diaphora-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUI_INSTRUCTIONS.md  GUI_INSTRUCTIONS.ru.md  LICENSE  Problems.md  README.md  README.ru.md  SECURITY.md  _diaphora_headless.py  diaphora_gui_listener.py  diaphora_issue.md  diaphora_mcp_server.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  tests.yml
Fixes/: Plan.md  Problems.md  Roadmap.md
diaphora_mcp/: __init__.py  config.py  diaphora_mcp_server.py  models.py
diaphora_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diaphora_mcp/core/: __init__.py  analysis.py  diff.py  export.py  graph.py  mapping.py  metadata.py  performance.py  ranking.py  report.py  repository.py  security.py
diaphora_mcp/scratch/: run_benchmark.py
diaphora_mcp/utils/: __init__.py  connection.py  format.py  hashing.py  ida_bridge.py  log.py  metrics.py  sqlite.py
docs/: CONFIGURATION.md  LIMITATIONS.md  TOOLS.md  WORKFLOWS.md
docs/plans/: 2026-07-15-diaphora-remediation-design.md  (+3 more)
examples/: basic-session.md  basic-session.ru.md  batch-workflow.md  idalib_mcp_matching.md  idalib_mcp_matching.ru.md  mcp-config.generic.json  mcp-config.windows.json  sqlite3_example.md  sqlite3_example.ru.md
idalib/: INSTALL.md  ida_mcp.py
tests/: test_mapping_regressions.py  test_remediation_regressions.py  test_security_regressions.py
(+5 files in other folders)
