[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "diaphora-mcp"
version = "1.0.0"
description = "MCP server for automated binary diffing via Diaphora + IDA Pro"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
include = ["diaphora_mcp*"]

[tool.setuptools]
py-modules = ["_diaphora_headless", "diaphora_gui_listener", "diaphora_mcp_server"]

